--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <div>
-            <img id="logo" src="img/aca0baf3-d1e8-4c42-b785-9a059d1f90a8.jpg" alt="">
+            <img class="logo" src="img/aca0baf3-d1e8-4c42-b785-9a059d1f90a8-removebg-preview.png" alt="">
             <h1>Seja bem vindo!</h1>
             <p>Acesse sua conta<br>agora mesmo.</p>
             <button>ENTRAR</button>
