adaptação do imc.css para index e updates gerais

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <title>Minimal Fit</title>
 </head>
 <body>
     <div class="container">
         <div class="left">
-            <img class="logo" src="mg/aca0baf3-d1e8-4c42-b785-9a059d1f90a8-removebg-preview.png" alt="">
+            <img class="logo" src="img/aca0baf3-d1e8-4c42-b785-9a059d1f90a8-removebg-preview.png" alt="">
             <h1>Seja bem vindo!</h1>
             <p>Acesse sua conta<br>agora mesmo.</p>
             <button>ENTRAR</button>
@@ -19,7 +20,7 @@
             <h1>Crie sua conta</h1>
             <p>Preencha o formulário</p>
             <input placeholder="Nome" type="text">
-            <input placeholder="Email" type="text">
+            <input class="middle" placeholder="Email" type="text">
             <input placeholder="Senha" type="text">
             <button>CADASTRAR</button>
         </div>
