Update imc e index

--- a/imc-cadastro.html
+++ b/imc-cadastro.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/css/imc-cadastro.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <title>Minimal Fit</title>
 </head>
 <body>
     <div class="container">
         <div class="left">
-            <img src="" alt="">
+            <img src="./src/images/MINIMAL-removebg-preview.png" alt="logo">
             <h1>Queremos saber <br> mais sobre você.</h1>
-            <button>ENTRAR</button>
         </div>
         <div class="right">
             <h1>Vamos calcular seu IMC</h1>
