--- a/imc-cadastro.html
+++ b/imc-cadastro.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./src/images/MINIMAL-removebg-preview.png">
     <link rel="stylesheet" href="src/css/imc-cadastro.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <title>Minimal Fit</title>
@@ -20,7 +21,8 @@
                 <input type="text" placeholder="Nome completo" required>
                 <input type="number" step="0.01" placeholder="Altura (em metros, ex: 1.75)" required>
                 <input type="number" step="0.1" placeholder="Peso (em kg, ex: 70.5)" required>
-                <button type="submit">Calcular IMC</button>
+                
+                <a href="./dashboard.html"><button type="">Calcular IMC</button></a>
             </form>
         </div>
     </div>
