Update de atalho em todos os htmls e css e adicionado padrão de design todas as paginas

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
     <title>Dashboard</title>
   </head>
 
-  <body>
+  <body class="fade-in">
     <div class="container">
       <section class="navegacao">
         <div class="perfil">
@@ -23,12 +23,12 @@
           <p>seuemail@dominio.com.br</p>
         </div>
 
-        <a href="">Dashboard</a>
-        <a href="">Histórico</a>
-        <a href="">Receitas</a>
-        <a href="">Treinos</a>
-        <a href="">Diário</a>
-        <a href="">IMC</a>
+        <a class="dashboard" href="./dashboard.html">Dashboard</a>
+        <a class="historico" href="./historico.html">Histórico</a>
+        <a class="receitas" href="./receitas.html">Receitas</a>
+        <a class="treino" href="./treino2.html">Treinos</a>
+        <a class="diario" href="./diario.html">Diário</a>
+        <a class="imc" href="./">IMC</a>
       </section>
 
       <section class="conteudo">
