--- a/imc-cadastro.html
+++ b/imc-cadastro.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <title>Minimal Fit</title>
 </head>
-<body>
+<body class="fade-in">
     <div class="container">
         <div class="left">
             <img src="./src/images/MINIMAL-removebg-preview.png" alt="logo">
@@ -18,11 +18,11 @@
             <h1>Vamos calcular seu IMC</h1>
             <p>Para analisarmos seu Índice de Massa Corporal (IMC), <br> por favor, preencha os dados abaixo com atenção.</p>
             <form>
-                <input type="text" placeholder="Nome completo" required>
-                <input type="number" step="0.01" placeholder="Altura (em metros, ex: 1.75)" required>
-                <input type="number" step="0.1" placeholder="Peso (em kg, ex: 70.5)" required>
+                <input type="text" placeholder="Nome completo" >
+                <input type="number" step="0.01" placeholder="Altura (em metros, ex: 1.75)" >
+                <input type="number" step="0.1" placeholder="Peso (em kg, ex: 70.5)">
                 
-                <a href="./dashboard.html"><button type="">Calcular IMC</button></a>
+                <a class="button" href="./dashboard.html">Calcular IMC</a>
             </form>
         </div>
     </div>
