--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <title>Minimal Fit</title>
 </head>
-<body>
+<body class="fade-in">
     <div class="container">
         <div class="left">
             <img class="logo" src="/src/images/MINIMAL-removebg-preview.png" alt="">
