--- a/treino2.html
+++ b/treino2.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./src/css/receitas.css" />
-    <title>Receitas</title>
+    <link rel="stylesheet" href="./src/css/treino2.css" />
+    <title>Treino</title>
   </head>
 
   <body class="fade-in">
