Upadte dashboard e receitas

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="./src/css/dashboard.css" />
     <title>Dashboard</title>
   </head>
@@ -17,9 +20,9 @@
     <div class="container">
       <section class="navegacao">
         <div class="perfil">
-          <h1>Perfil</h1>
+
           <img src="/src/images/avatar.png" alt="Profile" />
-          <p>Avatar</p>
+          <h1>Perfil</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
 
@@ -37,36 +40,52 @@
           <a href="">+ Treino</a>
           <a href="">Calorias</a>
         </div>
-        <div class="historico-card">
-          <h1>Histórico de Treinos</h1>
-          <div class="item">
-            <p><strong>Data:</strong> 04/08/2025</p>
-            <p><strong>Descrição:</strong> Treino de Peito</p>
-            <p><strong>Calorias Gastas:</strong> 348cal</p>
-          </div>
-          <h1>Histórico de Alimentação</h1>
-
-          <div class="item">
-            <p><strong>Data:</strong> 04/08/2025</p>
-            <p><strong>Descrição:</strong> Almoço</p>
-            <p><strong>Calorias adicionadas:</strong> 480cal</p>
-          </div>
-        </div>
-
-        <div class="consumos">
-          <div>
-            <h1>Calorias Eliminadas</h1>
-            <div class="progresso-container">
-              <div class="progresso-bar">60%</div>
+        <div>
+          <div class="historico-card">
+            <h1>Histórico de Treinos</h1>
+            <div class="item">
+              <p><strong>Data:</strong> 04/08/2025</p>
+              <p><strong>Descrição:</strong> Treino de Peito</p>
+              <p><strong>Calorias Gastas:</strong> 348cal</p>
             </div>
-            <p><i class="bi bi-person-standing"></i>--------------<i class="bi bi-person-walking"></i>-----------<i class="bi bi-person-arms-up"></i></p>
-          </div>
-          <div>
-            <h1>Calorias Consumidas</h1>
-            <div class="progresso-container">
-              <div class="progresso-bar">60%</div>
+            <h1>Histórico de Alimentação</h1>
+
+            <div class="item">
+              <p><strong>Data:</strong> 04/08/2025</p>
+              <p><strong>Descrição:</strong> Almoço</p>
+              <p><strong>Calorias adicionadas:</strong> 480cal</p>
             </div>
-            <p><i class="bi bi-droplet"></i>--------------<i class="bi bi-egg-fill"></i>-----------<i class="bi bi-egg-fried"></i></p>
+          </div>
+
+          <div class="avatar-3d">
+            <img src="./src/images/avatar3d.png" alt="" />
+          </div>
+
+          <div class="consumos">
+            <div>
+              <h1>Calorias Eliminadas</h1>
+              <div class="progresso-container">
+                <div class="progresso-bar">60%</div>
+              </div>
+              <p>
+                <i class="bi bi-person-standing"></i>--------------<i
+                  class="bi bi-person-walking"
+                ></i
+                >-----------<i class="bi bi-person-arms-up"></i>
+              </p>
+            </div>
+            <div>
+              <h1>Calorias Consumidas</h1>
+              <div class="progresso-container">
+                <div class="progresso-bar">60%</div>
+              </div>
+              <p>
+                <i class="bi bi-droplet"></i>--------------<i
+                  class="bi bi-egg-fill"
+                ></i
+                >-----------<i class="bi bi-egg-fried"></i>
+              </p>
+            </div>
           </div>
         </div>
       </section>
