--- a/receitas.html
+++ b/receitas.html
@@ -4,25 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./src/images/MINIMAL-removebg-preview.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./src/css/receitas.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
     <title>Receitas</title>
   </head>
-
   <body class="fade-in">
     <div class="container">
       <section class="navegacao">
         <div class="perfil">
           <h1>Perfil</h1>
-          <img src="/src/images/avatar.png" alt="Profile" />
+          <img src="./src/images/avatar.png" alt="Profile" />
           <p>Avatar</p>
           <p>seuemail@dominio.com.br</p>
         </div>
-
         <a href="./dashboard.html">Dashboard</a>
         <a href="./historico.html">Histórico</a>
         <a href="./receitas.html">Receitas</a>
@@ -32,8 +26,18 @@
       </section>
 
       <section class="conteudo">
-        
+
+        <h1>RECEITAS</h1>
+        <div class="busca">
+          <input type="text" id="inputBusca" placeholder="Digite o nome da receita..." />
+          <button onclick="buscarReceitas()">Buscar</button>
+        </div>
+        <div id="resultados">
+          <!-- Receitas aparecerão aqui -->
+        </div>
       </section>
     </div>
+
+    <script src="./src/js/receitas.js"></script>
   </body>
 </html>
