--- a/dashboard.html
+++ b/dashboard.html
@@ -58,6 +58,11 @@
           </div>
 
           <div class="avatar-3d">
+            <div class="texto-sobre">
+              <h1>Seu IMC</h1>
+              <h2>34.3</h2>
+            </div>
+
             <img src="./src/images/avatar3d.png" alt="" />
           </div>
 
