--- a/treino.html
+++ b/treino.html
@@ -12,15 +12,14 @@
 <body>
 
     <section class="navegacao">
-        <div>
-            <h1>Perfil</h1>
+        <div class="perfil">
+            <h1 >Perfil</h1>
             <img src="/src/images/avatar.png" alt="Profile">
             <p>Avatar</p>
             <p>seuemail@dominio.com.br</p>
         </div>
 
         <a href="">Dashboard</a>
-        <a href="">Histórico</a>
         <a href="">Receitas</a>
         <a href="">Treinos</a>
         <a href="">Diário</a>
