--- a/diario.html
+++ b/diario.html
@@ -33,12 +33,27 @@
 
       <section class="conteudo">
         <h1 id="diario-conteudo">Diario Anotações</h1>
-        <div>
+        <div class="up">
             
             <div class="input-section">
                 
                 <textarea id="noteInput" placeholder="Adicionar nota"></textarea>
                 <button id="addNoteBtn">Adicionar</button>
+            </div>
+            <div class="down">
+              <div class="data">06/08/2025</div>
+              <h1>anotação de hoje</h1>   
+              hoje eu sai pra correr e tomei 3 copos de whey protein.
+            </div>
+            <div class="downDown">
+              <div class="data">05/08/2025</div>
+              <h1>anotação de hoje</h1>   
+              hoje eu sai pra correr e tomei 3 copos de whey protein.
+            </div>
+            <div class="downDownDown">
+              <div class="data">04/08/2025</div>
+              <h1>anotação de hoje</h1>   
+              hoje eu sai pra correr e tomei 3 copos de whey protein.
             </div>
       </section>
     </div>
