--- a/diario.html
+++ b/diario.html
@@ -39,17 +39,17 @@
                 <textarea id="noteInput" placeholder="Adicionar nota"></textarea>
                 <button id="addNoteBtn">Adicionar</button>
             </div>
-            <div class="down">
+            <div class="diario-1">
               <div class="data">06/08/2025</div>
               <h1>anotação de hoje</h1>   
               hoje eu sai pra correr e tomei 3 copos de whey protein.
             </div>
-            <div class="downDown">
+            <div class="diario-2">
               <div class="data">05/08/2025</div>
               <h1>anotação de hoje</h1>   
               hoje eu sai pra correr e tomei 3 copos de whey protein.
             </div>
-            <div class="downDownDown">
+            <div class="diario-3">
               <div class="data">04/08/2025</div>
                 <h1>anotação de hoje</h1>   
               hoje eu sai pra correr e tomei 3 copos de whey protein.
