--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
         <div class="perfil">
 
           <img src="/src/images/avatar.png" alt="Profile" />
-          <h1>Perfil</h1>
+          <h1>Fulano da Silva</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
 
