--- a/diario.html
+++ b/diario.html
@@ -17,9 +17,9 @@
     <div class="container">
       <section class="navegacao">
         <div class="perfil">
-          <h1>Perfil</h1>
+          
           <img src="/src/images/avatar.png" alt="Profile" />
-          <p>Avatar</p>
+          <h1>Fulano da Silva</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
 
