update treino e dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,98 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./src/images/MINIMAL-removebg-preview.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
-    <link rel="stylesheet" href="./src/css/dashboard.css" />
-    <title>Dashboard</title>
-  </head>
 
-  <body class="fade-in">
-    <div class="container">
-      <section class="navegacao">
-        <div class="perfil">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./src/images/MINIMAL-removebg-preview.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+  <link rel="stylesheet" href="./src/css/dashboard.css" />
+  <title>Dashboard</title>
+</head>
 
-          <img src="/src/images/avatar.png" alt="Profile" />
-          <h1>Perfil</h1>
-          <p>seuemail@dominio.com.br</p>
+<body class="fade-in">
+  <div class="container">
+    <section class="navegacao">
+      <div class="perfil">
+
+        <img src="/src/images/avatar.png" alt="Profile" />
+        <h1>Perfil</h1>
+        <p>seuemail@dominio.com.br</p>
+      </div>
+
+      <a class="dashboard" href="./dashboard.html">Dashboard</a>
+      <a class="receitas" href="./receitas.html">Receitas</a>
+      <a class="treino" href="./treino2.html">Treinos</a>
+      <a class="diario" href="./diario.html">Diário</a>
+      <a class="imc" href="./">IMC</a>
+    </section>
+
+    <section class="conteudo">
+      <div>
+        <a href="">+ Refeição</a>
+        <a href="">+ Treino</a>
+        <a href="">+ Agua</a>
+        <a href="">Calorias</a>
+      </div>
+      <div>
+        <div class="historico-card">
+          <h1>Histórico de Treinos</h1>
+          <div class="item">
+            <p><strong>Data:</strong> 04/08/2025</p>
+            <p><strong>Descrição:</strong> Treino de Peito</p>
+            <p><strong>Calorias Gastas:</strong> 348cal</p>
+          </div>
+          <h1>Histórico de Alimentação</h1>
+
+          <div class="item">
+            <p><strong>Data:</strong> 04/08/2025</p>
+            <p><strong>Descrição:</strong> Almoço</p>
+            <p><strong>Calorias adicionadas:</strong> 480cal</p>
+          </div>
         </div>
 
-        <a class="dashboard" href="./dashboard.html">Dashboard</a>
-        <a class="receitas" href="./receitas.html">Receitas</a>
-        <a class="treino" href="./treino2.html">Treinos</a>
-        <a class="diario" href="./diario.html">Diário</a>
-        <a class="imc" href="./">IMC</a>
-      </section>
+        <div class="avatar-3d">
+          <div class="texto-sobre">
+            <h1> Este aqui é o <br> Seu IMC</h1>
+            <h2>34.3</h2>
+          </div>
 
-      <section class="conteudo">
-        <div>
-          <a href="">+ Refeição</a>
-          <a href="">+ Treino</a>
-          <a href="">Calorias</a>
+          <img src="./src/images/avatar3d.png" alt="" />
         </div>
-        <div>
-          <div class="historico-card">
-            <h1>Histórico de Treinos</h1>
-            <div class="item">
-              <p><strong>Data:</strong> 04/08/2025</p>
-              <p><strong>Descrição:</strong> Treino de Peito</p>
-              <p><strong>Calorias Gastas:</strong> 348cal</p>
-            </div>
-            <h1>Histórico de Alimentação</h1>
 
-            <div class="item">
-              <p><strong>Data:</strong> 04/08/2025</p>
-              <p><strong>Descrição:</strong> Almoço</p>
-              <p><strong>Calorias adicionadas:</strong> 480cal</p>
+        <div class="consumos">
+          <div>
+            <h1>Calorias Eliminadas</h1>
+            <div class="progresso-container">
+              <div class="progresso-bar">60%</div>
             </div>
+            <p>
+              <i class="bi bi-person-standing"></i><i class="bi bi-person-walking"></i><i
+                class="bi bi-person-arms-up"></i>
+            </p>
           </div>
-
-          <div class="avatar-3d">
-            <div class="texto-sobre">
-              <h1>Seu IMC</h1>
-              <h2>34.3</h2>
+          <div>
+            <h1>Calorias Consumidas</h1>
+            <div class="progresso-container">
+              <div class="progresso-bar">60%</div>
             </div>
-
-            <img src="./src/images/avatar3d.png" alt="" />
-          </div>
-
-          <div class="consumos">
+            <p>
+              <i class="bi bi-droplet"></i><i class="bi bi-egg-fill"></i><i class="bi bi-egg-fried"></i>
+            </p>
             <div>
-              <h1>Calorias Eliminadas</h1>
+              <h1>Água Consumida</h1>
               <div class="progresso-container">
                 <div class="progresso-bar">60%</div>
               </div>
               <p>
-                <i class="bi bi-person-standing"></i>--------------<i
-                  class="bi bi-person-walking"
-                ></i
-                >-----------<i class="bi bi-person-arms-up"></i>
-              </p>
-            </div>
-            <div>
-              <h1>Calorias Consumidas</h1>
-              <div class="progresso-container">
-                <div class="progresso-bar">60%</div>
-              </div>
-              <p>
-                <i class="bi bi-droplet"></i>--------------<i
-                  class="bi bi-egg-fill"
-                ></i
-                >-----------<i class="bi bi-egg-fried"></i>
+                <i class="bi bi-person-standing"></i><i class="bi bi-person-walking"></i><i
+                  class="bi bi-person-arms-up"></i>
               </p>
             </div>
           </div>
         </div>
-      </section>
-    </div>
-  </body>
+      </div>
+    </section>
+  </div>
+</body>
+
 </html>
