--- a/diario.html
+++ b/diario.html
@@ -41,17 +41,17 @@
             </div>
             <div class="diario-1">
               <div class="data">06/08/2025</div>
-              <h1>anotação de hoje</h1>   
+              <h1>Anotação</h1>   
               hoje eu sai pra correr e tomei 3 copos de whey protein.
             </div>
             <div class="diario-2">
               <div class="data">05/08/2025</div>
-              <h1>anotação de hoje</h1>   
+              <h1>Anotação</h1>   
               hoje eu sai pra correr e tomei 3 copos de whey protein.
             </div>
             <div class="diario-3">
               <div class="data">04/08/2025</div>
-              <h1>anotação de hoje</h1>   
+              <h1>Anotação</h1>   
               hoje eu sai pra correr e tomei 3 copos de whey protein.
             </div>
       </section>
