--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <img class="logo" src="/src/images/MINIMAL-removebg-preview.png" alt="">
             <h1>Seja bem vindo!</h1>
             <p>Acesse sua conta<br>agora mesmo.</p>
-            <button>ENTRAR</button>
-            <a href="">Esqueci minha senha</a>
+            <button href="/dashboard.html">ENTRAR</button>
+            <a href="./dashboard.html">Esqueci minha senha</a>
         </div>
         <div class="right">
             <h1>Crie sua conta</h1>
@@ -23,7 +23,9 @@
             <input placeholder="Nome" type="text">
             <input class="middle" placeholder="Email" type="text">
             <input placeholder="Senha" type="text">
-            <button>CADASTRAR</button>
+             <a href="./imc-cadastro.html">
+                <button>CADASTRAR</button>
+             </a>
         </div>
     </div>
 </body>
