update todo o resto

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,10 @@
       <section class="navegacao">
         <div class="perfil">
           <img src="/src/images/avatar.png" alt="Profile" />
-          <h1>Perfil</h1>
+          <i class="bi bi-gear"></i>
+          <i class="bi bi-bell"></i>
+          <i id="logout" class="bi bi-box-arrow-in-right"></i>
+          <h1>Fulano da Silva</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
 
