--- a/receitas.html
+++ b/receitas.html
@@ -11,9 +11,11 @@
   <body class="fade-in">
     <div class="container">
       <section class="navegacao">
-        <div class="perfil">
-          
+        <div class="perfil">          
           <img src="./src/images/avatar.png" alt="Profile" />
+          <i class="bi bi-gear"></i>
+          <i class="bi bi-bell"></i>
+          <i id="logout" class="bi bi-box-arrow-in-right"></i>
           <h1>Fulano da Silva</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
