--- a/treino2.html
+++ b/treino2.html
@@ -13,21 +13,22 @@
 
 <body class="fade-in">
   <div class="container">
-    <section class="navegacao">
-      <div class="perfil">
+      <section class="navegacao">
+        <div class="perfil">
+          <img src="/src/images/avatar.png" alt="Profile" />
+          <i class="bi bi-gear"></i>
+          <i class="bi bi-bell"></i>
+          <i id="logout" class="bi bi-box-arrow-in-right"></i>
+          <h1>Fulano da Silva</h1>
+          <p>seuemail@dominio.com.br</p>
+        </div>
 
-        <img src="/src/images/avatar.png" alt="Profile" />
-        <h1>Fulano da Silva</h1>
-        <p>seuemail@dominio.com.br</p>
-      </div>
-
-      <a href="./dashboard.html">Dashboard</a>
-      <a href="./receitas.html">Receitas</a>
-      <a href="./treino2.html">Treinos</a>
-      <a href="./diario.html">Diário</a>
-      <a href="./">IMC</a>
-    </section>
-
+        <a class="dashboard" href="./dashboard.html"><i class="bi bi-app-indicator"> </i>Dashboard</a>
+        <a class="receitas" href="./receitas.html"><i class="bi bi-fork-knife"> </i>Receitas</a>
+        <a class="treino" href="./treino2.html"><i class="bi bi-activity"> </i>Treinos</a>
+        <a class="diario" href="./diario.html"><i class="bi bi-book"> </i>Diário</a>
+        <a class="imc" href="./imc.html"><i class="bi bi-clipboard-data"> </i>IMC</a>
+      </section>
     <section class="conteudo">
       <h1 id="treino-conteudo">Treino Semanal</h1>
       <div>
