--- a/diario.html
+++ b/diario.html
@@ -17,8 +17,10 @@
     <div class="container">
       <section class="navegacao">
         <div class="perfil">
-          
           <img src="/src/images/avatar.png" alt="Profile" />
+          <i class="bi bi-gear"></i>
+          <i class="bi bi-bell"></i>
+          <i id="logout" class="bi bi-box-arrow-in-right"></i>
           <h1>Fulano da Silva</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
@@ -41,17 +43,17 @@
             <div class="diario-1">
               <div class="data">06/08/2025</div>
               <h1>Anotação</h1>   
-              hoje eu sai pra correr e tomei 3 copos de whey protein.
+              <p>Hoje treinei pesado até a falha, me hidratei corretamente e fiz as refeições no horário correto. </p>
             </div>
             <div class="diario-2">
               <div class="data">05/08/2025</div>
               <h1>Anotação</h1>   
-              hoje eu sai pra correr e tomei 3 copos de whey protein.
+              <p>Hoje precisei fazer um treino mais curto, conclui todas as séries, mas senti que conseguiria treinar mais.</p>
             </div>
             <div class="diario-3">
               <div class="data">04/08/2025</div>
               <h1>Anotação</h1>   
-              hoje eu sai pra correr e tomei 3 copos de whey protein.
+              <p>Corri pela manhã antes do trabalho, me hidratei durante o dia e a noite fiz uma refeição mais completa, tambem consgeui treinar no horario</p>
             </div>
       </section>
     </div>
