--- a/receitas.html
+++ b/receitas.html
@@ -25,9 +25,18 @@
       </section>
 
       <section class="conteudo">
+        <div>
+          <h1>Receitas</h1>
+          <p>
+            Encontre receitas saudáveis e nutritivas inserindo seus ingredientes preferidos ou objetivos alimentares. Nossa API seleciona pratos balanceados, ideais para ganho de massa, perda de peso ou manutenção, ajudando você a manter o foco e alcançar suas metas de forma saborosa.
+          </p>
 
-        <h1>Receitas</h1>
+        </div>
+        
         <div class="busca">
+          <p>
+            Digite um ingrediente e descubra receitas fitness incríveis — exemplo: frango, batata-doce, aveia.
+          </p>
           <input type="text" id="inputBusca" placeholder="Digite o nome da receita..." />
           <button onclick="buscarReceitas()">Buscar</button>
         </div>
