--- a/chat-gpt.html
+++ b/chat-gpt.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="./src/css/chat-gpt.css" />
-    <title>Brocolito</title>
+    <title>Brócolito</title>
   </head>
 
   <body class="fade-in">
@@ -21,8 +21,11 @@
       <!-- Menu lateral -->
       <section class="navegacao">
         <div class="perfil">
-          <img src="/src/images/avatar.png" alt="Profile" />
-          <h1>Fulano da Silva</h1>
+          <img src="/src/images/o-filme-favorito-de-todos-os-tempos-de-ozzy-osbourne-51664044.jpg" alt="Profile" />
+          <i class="bi bi-gear"></i>
+          <i class="bi bi-bell"></i>
+          <i id="logout" class="bi bi-box-arrow-in-right"></i>
+          <h1>Ozzy Osbourne (Morcegão🦇)</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
 
@@ -67,7 +70,7 @@
               alt=""
             />
             <div>
-              <h1>Brocolito 🦾🥦</h1>
+              <h1>Brócolito 🦾🥦</h1>
               <p>Online</p>
             </div>
           </div>
