--- a/diario.html
+++ b/diario.html
@@ -17,11 +17,11 @@
     <div class="container">
       <section class="navegacao">
         <div class="perfil">
-          <img src="/src/images/avatar.png" alt="Profile" />
+          <img src="/src/images/o-filme-favorito-de-todos-os-tempos-de-ozzy-osbourne-51664044.jpg" alt="Profile" />
           <i class="bi bi-gear"></i>
           <i class="bi bi-bell"></i>
           <i id="logout" class="bi bi-box-arrow-in-right"></i>
-          <h1>Fulano da Silva</h1>
+          <h1>Ozzy Osbourne (Morcegão🦇)</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
        <a class="dashboard" href="./dashboard.html"><i class="bi bi-app-indicator"> </i>Dashboard</a>
@@ -33,6 +33,7 @@
 
       <section class="conteudo">
         <h1 id="diario-conteudo">Diario Anotações</h1>
+        <p>Adicione uma nova entrada no seu diário — exemplo: 'Treino de perna intenso hoje, me senti mais forte'.</p>
         <div class="up">
             
             <div class="input-section">
