--- a/receitas.html
+++ b/receitas.html
@@ -11,12 +11,12 @@
   <body class="fade-in">
     <div class="container">
       <section class="navegacao">
-        <div class="perfil">          
-          <img src="./src/images/avatar.png" alt="Profile" />
+        <div class="perfil">
+          <img src="/src/images/o-filme-favorito-de-todos-os-tempos-de-ozzy-osbourne-51664044.jpg" alt="Profile" />
           <i class="bi bi-gear"></i>
           <i class="bi bi-bell"></i>
           <i id="logout" class="bi bi-box-arrow-in-right"></i>
-          <h1>Fulano da Silva</h1>
+          <h1>Ozzy Osbourne (Morcegão🦇)</h1>
           <p>seuemail@dominio.com.br</p>
         </div>
        <a class="dashboard" href="./dashboard.html"><i class="bi bi-app-indicator"> </i>Dashboard</a>
