--- a/treino2.html
+++ b/treino2.html
@@ -15,7 +15,7 @@
   <div class="container">
       <section class="navegacao">
         <div class="perfil">
-          <img src="/src/images/o-filme-favorito-de-todos-os-tempos-de-ozzy-osbourne-51664044.jpg" alt="Profile" />
+          <img src="./src/images/o-filme-favorito-de-todos-os-tempos-de-ozzy-osbourne-51664044.jpg" alt="Profile" />
           <i class="bi bi-gear"></i>
           <i class="bi bi-bell"></i>
           <i id="logout" class="bi bi-box-arrow-in-right"></i>
