--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="fade-in">
     <div class="container">
         <div class="left">
-            <img class="logo" src="/src/images/MINIMAL-removebg-preview.png" alt="">
+            <img class="logo" src="./src/images/MINIMAL-removebg-preview.png" alt="">
             <h1>Seja bem vindo!</h1>
             <p>Acesse sua conta<br>agora mesmo.</p>
             <button href="/dashboard.html">ENTRAR</button>
